axum-macros/tests/debug_handler/fail/extract_self_mut.stderr
error: Handlers must only take owned values
  --> tests/debug_handler/fail/extract_self_mut.rs:19:22
   |
19 |     async fn handler(&mut self) {}
   |                      ^^^^^^^^^
